--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <title>Gastronaut</title>
 </head>
 <body>
     <nav>
-        <p>Gastronaut</p>
+        <p id="title">Gastronaut</p>
         <a href="/" class="nav">Home</a>
         <a href="/destinations" class="nav">View All</a>
         <a href="/destinations/new" class="nav">Add Spot</a>
