--- a/views/destinations/show.ejs
+++ b/views/destinations/show.ejs
@@ -14,9 +14,11 @@
         <form action="/destinations/<%= destination._id %>/edit">
             <button>Edit</button>
         </form>
+        <form action="/destinations/<%= destination._id %>/menu/new">
+            <button>Add Menu Item</button>
+        </form>
     </div>    
 </div>
 
 
-
-<%- include('../partials/footer') %>
+<%- include('../partials/footer') %> 
