--- a/views/destinations/edit.ejs
+++ b/views/destinations/edit.ejs
@@ -3,74 +3,61 @@
 <h1><%= title %></h1>
     <form action="/destinations/<%= destinationId %>?_method=PUT" method="POST" id="new-destination-form">
         <div class="row">
-            <div class="column">
+            <div class="input-field">
+                <input type="text" name="name" id="destination-name" placeholder="<%= destination.name %>">            
                 <label for="name">Name:</label>
             </div>
-            <div class="column-right">
-                <input type="text" name="name" id="destination-name" placeholder="<%= destination.name %>">            
-            </div>
         </div>
         <div class="row">
-            <div class="column">
-                <label for="city">City:</label>
-            </div>
-            <div class="column-right">
+            <div class="input-field">
                 <input type="text" name="city" id="destination-city" placeholder="<%= destination.city %>">            
+                <label for="city">City:</label>            
             </div>
         </div>
         <div class="row">
-            <div class="column">
+            <div class="input-field">
+                <input type="text" name="state" id="destination-state" placeholder="<%= destination.state %>">        
                 <label for="state">State:</label>
             </div>
-            <div class="column-right">
-                <input type="text" name="state" id="destination-state" placeholder="<%= destination.state %>">        
-            </div>
         </div>
         <div class="row">
-            <div class="column">
+            <div class="input-field">
+                <input type="text" name="country" id="destination-country" placeholder="<%= destination.country %>">            
                 <label for="country">Country:</label>
             </div>
-            <div class="column-right">
-                <input type="text" name="country" id="destination-country" placeholder="<%= destination.country %>">            
-            </div>
         </div>
         <div class="row">
-            <div class="column">
-                <label for="cuisine">Cuisine:</label>
-            </div>
-            <div class="column-right">
+            <div class="input-field">
                 <input type="text" name="cuisine" id="destination-cuisine" placeholder="<%= destination.cuisine %>">
+                <label for="cuisine">Cuisine:</label>            
             </div>
         </div>
         <div class="row">
-            <div class="column">
+            <div class="input-field">
+                <input type="text" name="category" id="destination-category" placeholder="<%= destination.category %>">
                 <label for="category">Category:</label>
             </div>
-            <div class="column-right">
-                <input type="text" name="category" id="destination-category" placeholder="<%= destination.category %>">
+        </div>
+        <div class="row">
+            <div class="input-field">
+                <div class="col s6"><label for="price">Price Range:</label></div>
+                <div class="col s6">
+                    <select class="browser-default" name="price">
+                        <% price.forEach( price => { %>
+                            <option value="<%= price %>"><%= price %></option>
+                        <% }) %>
+                    </select>                
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="column">
-                <label for="price">Price Range:</label>
-            </div>
-            <div class="column-right">
-                <select name="price">
-                    <% price.forEach( price => { %>
-                        <option value="<%= price %>"><%= price %></option>
-                    <% }) %>
-                </select>            
-            </div>
-        </div>
-        <div class="row">
-            <div class="column">
-                <label for="image">Add Image: </label>
-            </div>
-            <div class="column-right">
+            <div class="input-field">
                 <input type="text" name="image" id="destination-image">            
+                <label for="image">Add Image: </label>            
             </div>
         </div>
         <br>    
+<div class="center">
         <input type="submit" value="Update">
 
     </form>
@@ -78,4 +65,7 @@
     <form action="/destinations/<%= destinationId %>"> 
         <button>Return</button>
     </form>
+
+</div>
+
 <%- include('../partials/footer') %>
