--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <!-- Materialize CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Materialize JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="/stylesheets/style.css">
     <title>Gastronaut</title>
 </head>
 <body>
-    <nav>
-        <p id="title">Gastronaut</p>
-        <a href="/" class="nav">Home</a>
-        <a href="/destinations" class="nav">View All</a>
-        <a href="/destinations/new" class="nav">Add Spot</a>
+    <nav class="red darken-1">
+        <div class="nav-wrapper">
+            <p class="brand-logo left" id="title">Gastronaut</p>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="/">Home</a></li>
+                <li><a href="/destinations">View All</a></li>
+                <li><a href="/destinations/new">Add Spot</a></li>
+            </ul>            
+        </div>
     </nav>
     <main>
         <h1>Welcome to Gastronaut</h1>
