--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,41 +79,6 @@ a:hover {
   justify-content: center;
 }
 
-#destinations-table {
-  font-size: 1em;
-}
-
-#destinations-table > thead th {
-  border-bottom-style: none;
-}
-
-
-#new-flight-form {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(2, minmax(auto, 12rem));
-  text-align: right;
-}
-
-#destination-details, #ticket-details {
-  margin: 20px;
-  display: flex;
-}
-
-#details-btn {
-  font-size: 12px;
-  padding: 4px;
-}
-
-#add-dest-to-flight {
-  display: flex;
-  justify-content: center;
-}
-
-#ticket-table {
-  margin: auto;
-}
-
 #remove-destination {
   display: flex;
   justify-content: space-between;
@@ -125,3 +90,44 @@ a:hover {
   letter-spacing: 0.04ch;
   font-size: 2.6rem;
 }
+
+/* -------------- MODAL CSS BELOW -------------- */
+        /* The Modal (background) */
+        .modal {
+          display: none; /* Hidden by default */
+          position: fixed; /* Stay in place */
+          z-index: 1; /* Sit on top */
+          padding-top: 100px; /* Location of the box */
+          left: 0;
+          top: 0;
+          width: 100%; /* Full width */
+          height: 100%; /* Full height */
+          max-height: 100%;
+          overflow: auto; /* Enable scroll if needed */
+          background-color: rgb(0,0,0); /* Fallback color */
+          background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+        
+        /* Modal Content */
+        .modal-content {
+          background-color: #fefefe;
+          margin: auto;
+          padding: 20px;
+          border: 1px solid #888;
+          width: 50%;
+        }
+        
+        /* The Close Button */
+        .close {
+          color: #aaaaaa;
+          float: right;
+          font-size: 28px;
+          font-weight: bold;
+        }
+        
+        .close:hover,
+        .close:focus {
+          color: #000;
+          text-decoration: none;
+          cursor: pointer;
+        }
