--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,8 @@
     </nav>
     <main>
         <h1>Welcome to Gastronaut</h1>
+
+</div>
     </main>
     <footer>All Rights Reserved &copy 2021</footer>
 </body>
