wip: alter styling on pages

--- a/views/destinations/show.ejs
+++ b/views/destinations/show.ejs
@@ -30,7 +30,7 @@
             <div class="menu-item">
                 <img src="<%= m.image %>" alt="<%= m.name %>" width="200" class="card">
                 <div class="modal">
-                    <div class="modal-content">
+                    <div class="modal-content center">
                         <span class="close">&times;</span>
                         <img src="<%= m.image %>" width="300">
                         <p style="font-weight: bold;"><%= m.name %></p>
