--- a/views/menu/edit.ejs
+++ b/views/menu/edit.ejs
@@ -28,7 +28,7 @@
         </div>
 </form>       
         <div>
-            <form action="/menu/<%= menuId %>" method="GET">
+            <form action="/destinations/<%= menu.destination %>" method="GET">
             <button type="submit">Return</button>
             </form> 
         </div> 
