--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,6 +64,44 @@ a:hover {
   transition: all .2s ease-in-out;
 }
 
+.destinations {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px auto 0 auto;
+  width: 1200px;
+  flex-wrap: wrap;
+}
+
+.destination {
+  margin: 15px;
+}
+
+.destination figure {
+	position: relative;
+	overflow: hidden;
+	margin: 10px 1%;
+	min-width: 320px;
+	max-width: 480px;
+	max-height: 360px;
+	background: #333333;
+	text-align: center;
+	cursor: pointer;
+}
+
+div.destination img {
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: scale(1.15);
+	transform: scale(1.15);
+}
+
+div.destination:hover img {
+	opacity: 0.5;
+	-webkit-transform: scale(1);
+	transform: scale(1);
+}
+
 .previous {
   color: rgb(157, 2, 2);
 }
