--- a/views/destinations/index.ejs
+++ b/views/destinations/index.ejs
@@ -1,18 +1,26 @@
 <%- include('../partials/header') %>
 
 <h1><%= title %></h1>
+<section class="destinations">
 <% destinations.forEach(function(destination) { %>
-    <a href="/destinations/<%= destination._id %>"><img src="<%= destination.image %>" width="500"></a> 
-    <br>
-    <div id="remove-destination">
-        <a href="/destinations/<%= destination._id %>"><%= destination.name %></a> 
-        <form action="/destinations/<%= destination._id %>?_method=DELETE" method="POST">
-            <button type="submit">Remove</button>
-        </form>
+    <div class="destination">
+        <figure>
+            <a href="/destinations/<%= destination._id %>"><img src="<%= destination.image %>" width="500"></a>             
+        </figure>
+        <br>
+        <div id="remove-destination">
+            <a href="/destinations/<%= destination._id %>"><%= destination.name %></a> 
+            <form action="/destinations/<%= destination._id %>?_method=DELETE" method="POST">
+                <button type="submit">Remove</button>
+            </form>
+        </div>
+
+        <p><%= destination.city %>, <%= destination.state %>, <%= destination.country %></p>
+        <p><%= destination.price %></p>
     </div>
 
-    <p><%= destination.city %>, <%= destination.state %>, <%= destination.country %></p>
-    <p><%= destination.price %></p>
-<% }) %>
+<% }) %>    
+</section>
+
 
 <%- include('../partials/footer') %>
