--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,13 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/destinations">View All</a></li>
                 <li><a href="/destinations/new">Add Spot</a></li>
+                <li>
+                    <% if(user) { %>
+                        <a href="/logout"><i class="material-icons left">trending_flat</i>Logout</a>
+                    <% } else { %>
+                        <a href="/auth/google"><i class="material-icons left">vpn_key</i>Login with Google</a>
+                    <% } %>
+                </li>
             </ul>            
         </div>
     </nav>
