--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,7 @@
     <!-- jQuery -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Gastronaut</title>
 </head>
 <body>
