--- a/views/destinations/index.ejs
+++ b/views/destinations/index.ejs
@@ -11,7 +11,7 @@
         <div id="remove-destination">
             <a href="/destinations/<%= destination._id %>"><%= destination.name %></a> 
             <form action="/destinations/<%= destination._id %>?_method=DELETE" method="POST">
-                <button type="submit">Remove</button>
+                <button class="btn" type="submit">Remove</button>
             </form>
         </div>
 
