--- a/views/menu/new.ejs
+++ b/views/menu/new.ejs
@@ -24,12 +24,12 @@
     </div>
     <div class="center">
         <div>
-            <button type="submit">Submit</button>
+            <button class="btn white-text" type="submit">Submit</button>
         </div>
 </form>       
         <div>
             <form action="/destinations/<%= destinationId %>" method="GET">
-            <button type="submit">Return</button>
+            <button class="btn white-text" type="submit">Return</button>
             </form> 
         </div> 
     </div>
