--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400&family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400&family=Satisfy&display=swap&family=Quattrocento&display=swap');
 
 * {
   box-sizing: border-box;
@@ -19,12 +19,23 @@ body {
 main {
   flex-grow: 1;
   font-size: 1rem;
+  z-index: 999;
+}
+
+#home-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 footer {
 display: flex;
 height: 5vh;
 font-size: 0.8rem;
+}
+
+#home-page-footer {
+  z-index: 999;
 }
 
 nav {
@@ -37,6 +48,7 @@ h1 {
   text-align: center;
   font-size: 2.6rem;
   font-weight: bolder;
+  z-index: 999;
 }
 
 button {
@@ -92,17 +104,21 @@ a:hover {
 div.destination img {
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
-	-webkit-transform: scale(1.15);
-	transform: scale(1.15);
+	-webkit-transform: scale(1.05);
+	transform: scale(1.05);
 }
 
 div.destination:hover img {
-	opacity: 0.5;
+	opacity: 0.7;
 	-webkit-transform: scale(1);
 	transform: scale(1);
 }
 
 img.card {
+
+  min-width: 200px;
+  max-width: 250px;
+  max-height: 250px;
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
 	-webkit-transform: scale(1);
@@ -110,9 +126,11 @@ img.card {
 }
 
 img.card:hover {
-	opacity: 0.5;
-	-webkit-transform: scale(1.15);
-	transform: scale(1.15);
+  position: relative;
+  overflow: hidden;
+	opacity: 0.8;
+	-webkit-transform: scale(1.05);
+	transform: scale(1.05);
   cursor: pointer; 
 }
 .previous {
@@ -136,6 +154,11 @@ img.card:hover {
   justify-content: center;
 }
 
+.comment-block {
+  border: 1px solid black;
+  margin: 5px 0 5px 0;
+  padding: 10px;
+}
 #remove-destination {
   display: flex;
   justify-content: space-between;
@@ -143,12 +166,28 @@ img.card:hover {
 }
 
 #title {
-  font-family: "Lobster";
+  font-family: "Satisfy";
   letter-spacing: 0.04ch;
   font-size: 2.6rem;
 }
 
+#welcome-text {
+  font-family: "Quattrocento";
+  font-size: 4.7rem;
+}
+
+#enter-link {
+  color:rgb(255, 0, 0)
+}
+
+#enter-link:hover {
+  color: white;  
+  transform: scale(1.1);
+  transition: all .2s ease-in-out;
+}
+
 /* -------------- MODAL CSS BELOW -------------- */
+
         /* The Modal (background) */
         .modal {
           display: none; /* Hidden by default */
@@ -188,3 +227,63 @@ img.card:hover {
           text-decoration: none;
           cursor: pointer;
         }
+/* -------------- HOME PAGE ANIMATION -------------- */
+
+.crossfade > figure {
+  animation: imageAnimation 30s linear infinite 0s;
+  backface-visibility: hidden;
+  background-size: cover;
+  background-position: center center;
+  color: transparent;
+  height: 100%;
+  left: 0px;
+  opacity: 0;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  z-index: 0;
+  margin: 0;
+}
+
+.crossfade > figure:nth-child(1) { 
+  background-image: url('https://i.imgur.com/8amxrhA.jpg'); }
+
+.crossfade > figure:nth-child(2) {
+  animation-delay: 6s;
+  background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.10), rgba(10, 10, 10, 0.90)), url('https://i.imgur.com/608SLJC.jpg');
+}
+
+.crossfade > figure:nth-child(3) {
+  animation-delay: 12s;
+  background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.10), rgba(10, 10, 10, 0.90)), url('https://i.imgur.com/aEY7GaU.jpg');
+}
+
+.crossfade > figure:nth-child(4) {
+  animation-delay: 18s;
+  background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.10), rgba(10, 10, 10, 0.90)), url('https://i.imgur.com/9Bgtpr5.jpg');
+}
+
+.crossfade > figure:nth-child(5) {
+  animation-delay: 24s;
+  background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.10), rgba(10, 10, 10, 0.90)), url('https://i.imgur.com/6sno3hG.jpg');
+}
+
+@keyframes 
+imageAnimation {  0% {
+ animation-timing-function: ease-in;
+ opacity: 0;
+}
+ 8% {
+ animation-timing-function: ease-out;
+ opacity: 1;
+}
+ 17% {
+ opacity: 1
+}
+ 25% {
+ opacity: 1
+}
+ 100% {
+ opacity: 1
+}
+}
