--- a/views/destinations/new.ejs
+++ b/views/destinations/new.ejs
@@ -29,11 +29,15 @@
     <div class="row">
         <div class="input-field">
             <input type="text" name="cuisine" id="destination-cuisine">
+            <input type="text" name="cuisine" id="destination-cuisine">
+            <input type="text" name="cuisine" id="destination-cuisine">
             <label for="cuisine">Cuisine:</label>        
         </div>
     </div>
     <div class="row">
         <div class="input-field">
+            <input type="text" name="category" id="destination-category">
+            <input type="text" name="category" id="destination-category">
             <input type="text" name="category" id="destination-category">
             <label for="category">Category:</label>
         </div>
